src/assets/styles.css
/* styles.css */

/* Style for the container */
.container {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

/* Style for the buttons container */
.buttons-container {
  display: flex;
  flex-wrap: wrap; /* Allow buttons to wrap to the next line */
  justify-content: center;
  align-items: center;
  margin-bottom: 5vh; /* Add margin between buttons and input field */
}

/* Style for the buttons */
button {
  font-size: 4vw; /* Relative font size */
  padding: 1vh 2vw; /* Relative padding */
  color: white;
  border: none;
  border-radius: 12px;
  margin: 1vh;
  text-transform: uppercase;
  max-width: 150px; /* Maximum width for each button */
  font-family: 'Comic Sans MS', cursive;
  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
}

/* Style for the input container */
.input-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 5vh; /* Add margin between buttons and input field */
}

.th-container {
  display: flex;
  align-items: start;
  gap: 20px;
}
.th-grid {
  display: grid;
  grid-template-columns: repeat(8, 50px); /* Updated to 8 columns */
  grid-gap: 5px;
  margin: 15px;
}
.th-cell {
  width: 50px;
  height: 50px;
  background-color: #f0f0f0;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 36px;
  cursor: pointer;
  background-size: cover;
}
.treasure-icon {
  background-image: url('/src/assets/icons/treasure.png');
  background-size: cover;
}
.th-instructions {
  font-size: 28px;
  border: 2px solid black; /* Increased border thickness */
  padding: 20px; /* Increased padding */
  width: 250px; /* Increased width */
  height: 150px; /* Increased height */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #f8f8f8; /* Added background color */
  border-radius: 10px; /* Added border radius */
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Added box shadow for depth */
}
.th-treasure {
  background-image: url('/Leguan-Academy/src/assets/icons/treasure.png'); /* Treasure image URL */
}
.th-selected {
  background-image: url('/Leguan-Academy/src/assets/icons/treasureicon.png');

  
}
.treasure-start-icon{
  background-image: url('/Leguan-Academy/src/assets/icons/treasureicon.png');
z-index: 100;
}



h1 {
  margin-top: 50px;
}

ul {
  list-style: none;
  padding: 0;
}

li {
  margin-top: 20px;
}

.game-link {
  display: inline-block;
  padding: 20px 40px;
  background-color: #4CAF50;
  color: white;
  text-decoration: none;
  border-radius: 10px;
  transition: background-color 0.3s;
}

.game-link:hover {
  background-color: #45a049;
}

